consolidate seeding